# catkin_ws

mbsrobot_project/frontier_exploration/launch/: global_map.launch
mbsrobot_project/mbsrobot/launch/: auto_slam.launch  bringup.launch  bringup1.launch  lidar_slam.launch  ok.launch
mbsrobot_project/mbsrobot/param/navigation/: move_base.xml
mbsrobot_project/mbsrobot/rviz/: auto_slam.rviz
mbsrobot_project/rikirobot_gui/: CMakeLists.txt  nav.rviz  package.xml
mbsrobot_project/rikirobot_gui/launch/: rosbridge.launch
mbsrobot_project/rikirobot_gui/scripts/: mini-httpd.sh
navigation/fake_localization/: CMakeLists.txt
