<package>
  <name>rikirobot_gui</name>
  <version>0.1.0</version>
  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <description>rikirobot gui</description>
  <maintainer email="304050118@qq.com">kevin</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbridge_server</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosbridge_server</run_depend>

</package>
